# pipes

./: CMakeLists.txt  a.cpp  b.cpp  pipes_example.cpp  project.cpp  randomdata.cpp  test.cpp
